20 Jun 2013: Matthijs
	- Use IPV6 minimum MTU settings with TCP to reduce failures that
	  are caused by delays in learning working PMTU when communicating
	  through a tunnel.
	- Improved RRL logging: also print triggering query src addr and qtype
	  (thanks Klaus Darilion).
	- Merge some minor stuff from NSD3.2

18 Jun 2013: Matthijs
	- Add rrl-slip config option (thanks Stephane Bortzmeyer).
	- Add rrl-ipv{4,6}-prefix-length config option.
	- Bug #496: Support for EUI498 and EUI64 RR types.

14 Jun 2013: Wouter
	- Optimizations: -O3 if possible (user can override CFLAGS), udp
	  buffers are set to 1m by default (if socket options exist),
	  use recvmmsg and sendmmsg, or only recvmmsg, or recvfrom.

11 Jun 2013: Wouter
	- Fix memory leak in zone parser for txt record (since the large
	  number of txt subsections fix).
	- Fix zone parser allocations to be in db region.
	- nsd-mem prints advice

5 Jun 2013: Wouter
	- Fix segfault on repeated reconfigs, double free of zone apex name.

4 Jun 2013: Wouter
	- Remove duplicate zlfile variable from options structure.

30 May 2013: Wouter
	- Fix nsd-mem for printout of values above 4G.

16 May 2013: Wouter
	- Patch from Lukas Wunner that makes chroot more consistent.
	  Make all paths absolute with the chrootdir in front, or use
	  an absolute zonesdir with other patsh relative to that.

3 May 2013: Wouter
	- Fix race on exit of nsd, for restarts, so that the pidfile-pid
	  process waits until port53 has been closed before exiting.
	- update acx_nlnetlabs.m4 to v23, sleep w32 fix.

29 April 2013: Wouter
	- Remove unused pointer and fixup chroot include for trail slash.

26 April 2013: Wouter
	- Patch from Lukas Wunner that makes nsd.conf include files work
	  inside chroot/etc environments on repattern and reconfig.

25 April 2013: Matthijs
	- New config option "ip-transparent:", to bind to non local addresses
	  (thanks Arjen Zonneveld).
	- RRtypes ASFDB, RP, RT should not compress dnames (thanks Peter
	  van Dijk).
